# bdb

./: .gitignore  CMakeLists.txt  README.md  bdb.cpp  bdb.qrc  bdb_nl.ts  disc.h  discdialog.cpp  discdialog.h  discdialog.ui  discmodel.cpp  discmodel.h  genre.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nicam.h
